# NexusMRP

./: .gitignore  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
benches/: mrp_bench.rs
crates/mrp-cache/: Cargo.toml
crates/mrp-cache/src/: dirty_tracking.rs  incremental.rs  lib.rs
crates/mrp-calc/: Cargo.toml
crates/mrp-calc/src/: bucketing.rs  calculator.rs  lead_time.rs  lib.rs  lot_sizing.rs  netting.rs  pegging.rs
crates/mrp-core/: Cargo.toml
crates/mrp-core/src/: calendar.rs  config.rs  demand.rs  inventory.rs  lib.rs  plan.rs  supply.rs
crates/mrp-ffi/: Cargo.toml
crates/mrp-ffi/src/: lib.rs  python.rs
crates/mrp-optimizer/: Cargo.toml
crates/mrp-optimizer/src/: capacity.rs  constraint.rs  lib.rs  scheduling.rs
docs/: COMMERCIAL-LICENSE.zh-TW.md  DYNAMIC_TIME_BUCKETS.md  INTEGRATION_WITH_NEXUSBOM.de.md  INTEGRATION_WITH_NEXUSBOM.md  INTEGRATION_WITH_NEXUSBOM.zh-CN.md  INTEGRATION_WITH_NEXUSBOM.zh-TW.md  NEGATIVE_INVENTORY.md  README.zh-CN.md  README.zh-TW.md
examples/: bike_mrp.rs  bike_mrp_simple.rs  python_negative_inventory_example.py  simple_mrp.rs
tests/: integration_test.rs
