[package]
name = "mrp-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
mrp-core.workspace = true
mrp-calc.workspace = true

chrono.workspace = true
rust_decimal.workspace = true
uuid.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
