[package]
name = "mrp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
rust_decimal.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
